# master-26-tfm

./: .claudeignore  .commitlintrc.yaml  .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.agents/skills/commit-push-pr/: SKILL.md
.agents/skills/commit-push-pr/references/: pr-body-template.md
.agents/skills/langchain-dependencies/: SKILL.md
.agents/skills/langchain-fundamentals/: SKILL.md
.agents/skills/langchain-middleware/: SKILL.md
.agents/skills/langchain-rag/: SKILL.md
.agents/skills/langgraph-fundamentals/: SKILL.md
.agents/skills/langgraph-human-in-the-loop/: SKILL.md
.agents/skills/langgraph-persistence/: SKILL.md
.agents/skills/review-pr/: SKILL.md
.claude/: settings.json
.claude/agents/: comment-minimalism-enforcer.md  dependency-updater.md  docs-sync.md  python-reviewer.md  security-scanner.md  terraform-reviewer.md
.codex/: config.toml
.github/: pull_request_template.md
.github/workflows/: azure-oidc-validate.yml  ci.yml  docker-agents.yml  opencode-review.yml  opencode.yml  terraform.yml
.opencode/: opencode.json
agents/code/: pyproject.toml
agents/code/src/code_agent/: __init__.py  app.py
agents/orchestrator/: pyproject.toml
agents/orchestrator/src/orchestrator/: __init__.py  app.py  graph.py  llm.py  nodes.py  state.py
agents/orchestrator/tests/: conftest.py  test_app.py  test_graph.py
agents/rag/: pyproject.toml
agents/rag/src/rag/: __init__.py  app.py
docs/: architecture.md  cicd.md  create-openai-doc.md  objectives.md  roadmap.md  scope.md  stack.md
docs/auto-review/: README.md  accepted-findings.md
infra/: .terraform.lock.hcl  .tflint.hcl  AGENTS.md  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
infra/environments/dev/: terraform.tfvars  terraform.tfvars.example
infra/modules/ai/: main.tf  outputs.tf  variables.tf
infra/modules/compute/: main.tf  outputs.tf  variables.tf
infra/modules/dashboard/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/networking/: main.tf  outputs.tf  variables.tf
infra/modules/observability/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/security/: main.tf  outputs.tf  variables.tf
infra/scripts/: backend.conf  bootstrap-backend.sh  create-observability.conf  create-observability.sh  create-openai.conf  create-openai.sh
shared/: pyproject.toml
shared/src/shared/: __init__.py  app.py  auth.py  models.py  telemetry.py
shared/tests/: conftest.py  test_app.py  test_auth.py  test_telemetry.py
