[project]
name = "code-agent"
version = "0.1.0"
description = "Code agent — generates and executes code in a sandbox"
requires-python = ">=3.12"
dependencies = [
    "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
shared = { workspace = true }
