[project]
name = "rag"
version = "0.1.0"
description = "RAG agent — retrieval-augmented generation over project docs"
requires-python = ">=3.12"
dependencies = [
    "shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
shared = { workspace = true }
